--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: Material Science Discussion Group of IIT Madras
 # List of links in the navigation bar
 navbar-links:
   Blog : "blog"
+  Upcoming meetings: "schedule"
   # Resources:
   #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #   - Learn markdown: "http://www.markdowntutorial.com/"
