--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ avatar: "/img/avatar-icon.png"
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
-author:
+#author:
   name: Some Person
   email: "youremail@domain.com"
   facebook: yourname  # eg. daattali
@@ -52,17 +52,17 @@ author:
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
-  email: true
-  twitter: true
-  github: true
+  facebook: false
+  email: false
+  twitter: false
+  github: false
   linkedin: false
   stackoverflow: false
   instagram: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+#url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
