--- a/_config.yml
+++ b/_config.yml
@@ -33,21 +33,21 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+#avatar: "/img/avatar-icon.png"
 
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 #author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  linkedin: yourname  # eg. daattali
-  stackoverflow: yourlink  # eg. "3943160/daattali"
-  instagram: yourname # eg. daattali
+#  name: Some Person
+#  email: "youremail@domain.com"
+#  facebook: yourname  # eg. daattali
+#  github: yourname    # eg. daattali
+#  twitter: yourname   # eg. daattali
+#  linkedin: yourname  # eg. daattali
+#  stackoverflow: yourlink  # eg. "3943160/daattali"
+#  instagram: yourname # eg. daattali
  
 # Select which links to show in the footer
 footer-links-active:
